Added Guess Game
A little exercise to improve my Rust Skills

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,58 @@ missing_number_array/target/debug/missing_number_array
 missing_number_array/target/debug/.cargo-lock
 largest_subarray/target/debug/.cargo-lock
 leaders_in_array/target/debug/leaders_in_array
+*.rlib
+guess_game/target/debug/.fingerprint/cfg-if-4ab8b19f6ac198be/dep-lib-cfg-if
+guess_game/target/debug/.fingerprint/cfg-if-4ab8b19f6ac198be/lib-cfg-if
+guess_game/target/debug/.fingerprint/cfg-if-a08cfa42db5d7bec/dep-lib-cfg-if
+guess_game/target/debug/.fingerprint/cfg-if-a08cfa42db5d7bec/lib-cfg-if
+guess_game/target/debug/.fingerprint/getrandom-74ca42373d9864f9/dep-lib-getrandom
+guess_game/target/debug/.fingerprint/getrandom-74ca42373d9864f9/lib-getrandom
+guess_game/target/debug/.fingerprint/getrandom-975516f28d8d4ebd/dep-lib-getrandom
+guess_game/target/debug/.fingerprint/getrandom-975516f28d8d4ebd/lib-getrandom
+guess_game/target/debug/.fingerprint/guess_game-6d694024759cf90a/bin-guess_game
+guess_game/target/debug/.fingerprint/guess_game-6d694024759cf90a/dep-bin-guess_game
+guess_game/target/debug/.fingerprint/guess_game-97561d8125c4ef16/dep-test-bin-guess_game
+guess_game/target/debug/.fingerprint/guess_game-97561d8125c4ef16/test-bin-guess_game
+guess_game/target/debug/.fingerprint/guess_game-b6ad24d18520d7d3/bin-guess_game
+guess_game/target/debug/.fingerprint/guess_game-b6ad24d18520d7d3/dep-bin-guess_game
+guess_game/target/debug/.fingerprint/libc-53a2429546f1083b/dep-lib-libc
+guess_game/target/debug/.fingerprint/libc-53a2429546f1083b/lib-libc
+guess_game/target/debug/.fingerprint/libc-546ef6850873b210/run-build-script-build-script-build
+guess_game/target/debug/.fingerprint/libc-5594a1d0664fa29f/dep-lib-libc
+guess_game/target/debug/.fingerprint/libc-5594a1d0664fa29f/lib-libc
+guess_game/target/debug/.fingerprint/libc-cb73b06455f176fa/build-script-build-script-build
+guess_game/target/debug/.fingerprint/libc-cb73b06455f176fa/dep-build-script-build-script-build
+guess_game/target/debug/.fingerprint/ppv-lite86-3e0c6866d6911470/dep-lib-ppv-lite86
+guess_game/target/debug/.fingerprint/ppv-lite86-3e0c6866d6911470/lib-ppv-lite86
+guess_game/target/debug/.fingerprint/ppv-lite86-83ccbe27f584a0cc/dep-lib-ppv-lite86
+guess_game/target/debug/.fingerprint/ppv-lite86-83ccbe27f584a0cc/lib-ppv-lite86
+guess_game/target/debug/.fingerprint/rand-04e091540e1cf15b/dep-lib-rand
+guess_game/target/debug/.fingerprint/rand-04e091540e1cf15b/lib-rand
+guess_game/target/debug/.fingerprint/rand-e71d2eaf0d685d58/dep-lib-rand
+guess_game/target/debug/.fingerprint/rand-e71d2eaf0d685d58/lib-rand
+guess_game/target/debug/.fingerprint/rand_chacha-9e62640597c9938b/dep-lib-rand_chacha
+guess_game/target/debug/.fingerprint/rand_chacha-9e62640597c9938b/lib-rand_chacha
+guess_game/target/debug/.fingerprint/rand_chacha-dfda91e41c346517/dep-lib-rand_chacha
+guess_game/target/debug/.fingerprint/rand_chacha-dfda91e41c346517/lib-rand_chacha
+guess_game/target/debug/.fingerprint/rand_core-5d73423b193df1ba/dep-lib-rand_core
+guess_game/target/debug/.fingerprint/rand_core-5d73423b193df1ba/lib-rand_core
+guess_game/target/debug/.fingerprint/rand_core-e897613386497937/dep-lib-rand_core
+guess_game/target/debug/.fingerprint/rand_core-e897613386497937/lib-rand_core
+guess_game/target/debug/build/libc-546ef6850873b210/output
+guess_game/target/debug/build/libc-546ef6850873b210/root-output
+guess_game/target/debug/build/libc-546ef6850873b210/stderr
+guess_game/target/debug/build/libc-cb73b06455f176fa/build-script-build
+guess_game/target/debug/build/libc-cb73b06455f176fa/build_script_build-cb73b06455f176fa
+guess_game/target/debug/deps/guess_game-b6ad24d18520d7d3
+guess_game/target/debug/guess_game
+sliding_window/target/debug/sliding_window
+sliding_window/target/debug/deps/sliding_window-4894bf65b3668901
+sliding_window/target/debug/.fingerprint/sliding_window-f48abe017ccfcc7e/dep-bin-sliding_window
+sliding_window/target/debug/.fingerprint/sliding_window-f48abe017ccfcc7e/bin-sliding_window
+sliding_window/target/debug/.fingerprint/sliding_window-4894bf65b3668901/dep-bin-sliding_window
+sliding_window/target/debug/.fingerprint/sliding_window-4894bf65b3668901/bin-sliding_window
+sliding_window/target/debug/.fingerprint/sliding_window-3b4034050623c35f/test-bin-sliding_window
+sliding_window/target/debug/.fingerprint/sliding_window-3b4034050623c35f/dep-test-bin-sliding_window
+sliding_window/target/debug/.cargo-lock
+guess_game/target/debug/.cargo-lock
