Added Run the desert exercise
First solution to the problem,
O(k) complexity, k is the number of gas station

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,19 @@ sliding_window/target/debug/.fingerprint/sliding_window-3b4034050623c35f/test-bi
 sliding_window/target/debug/.fingerprint/sliding_window-3b4034050623c35f/dep-test-bin-sliding_window
 sliding_window/target/debug/.cargo-lock
 guess_game/target/debug/.cargo-lock
+run_in_desert/target/debug/.cargo-lock
+run_in_desert/target/debug/.fingerprint/run_in_desert-42a5804343ab97ee/dep-test-bin-run_in_desert
+run_in_desert/target/debug/.fingerprint/run_in_desert-42a5804343ab97ee/test-bin-run_in_desert
+run_in_desert/target/debug/.fingerprint/run_in_desert-59cf99a1d60adcb2/bin-run_in_desert
+run_in_desert/target/debug/.fingerprint/run_in_desert-59cf99a1d60adcb2/dep-bin-run_in_desert
+run_in_desert/target/debug/.fingerprint/run_in_desert-a0acd9b7c9847b9d/bin-run_in_desert
+run_in_desert/target/debug/.fingerprint/run_in_desert-a0acd9b7c9847b9d/dep-bin-run_in_desert
+run_in_desert/target/debug/deps/run_in_desert-a0acd9b7c9847b9d
+run_in_desert/target/debug/run_in_desert
+sliding_window/target/debug/deps/sliding_window-d35cf2014f7b3204
+sliding_window/target/debug/.fingerprint/sliding_window-d35cf2014f7b3204/dep-bin-sliding_window
+sliding_window/target/debug/.fingerprint/sliding_window-d35cf2014f7b3204/bin-sliding_window
+sliding_window/target/debug/.fingerprint/sliding_window-57895dc122726ea9/test-bin-sliding_window
+sliding_window/target/debug/.fingerprint/sliding_window-57895dc122726ea9/dep-test-bin-sliding_window
+sliding_window/target/debug/.fingerprint/sliding_window-1306ce54f430980b/dep-bin-sliding_window
+sliding_window/target/debug/.fingerprint/sliding_window-1306ce54f430980b/bin-sliding_window
