Added Hands-on 2 problems
Min Max problem
Query of operations

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,6 @@ sliding_window/target/debug/.fingerprint/sliding_window-57895dc122726ea9/test-bi
 sliding_window/target/debug/.fingerprint/sliding_window-57895dc122726ea9/dep-test-bin-sliding_window
 sliding_window/target/debug/.fingerprint/sliding_window-1306ce54f430980b/dep-bin-sliding_window
 sliding_window/target/debug/.fingerprint/sliding_window-1306ce54f430980b/bin-sliding_window
+CP-28-09.pages
+.DS_Store
+Notes/CP-3-10.pages
